@@ -2,9 +2,11 @@ package com.example.curingdunning.security;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
@@ -21,34 +23,36 @@ public class JwtFilter extends OncePerRequestFilter {
     private JwtUtil jwtUtil;
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
-            throws ServletException, IOException {
+    protected void doFilterInternal(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    FilterChain chain) throws ServletException, IOException {
 
         final String authHeader = request.getHeader("Authorization");
-
         String email = null;
-        String jwtToken = null;
+        String jwt = null;
 
-        // Extract token
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
-            jwtToken = authHeader.substring(7);
+            jwt = authHeader.substring(7);
             try {
-                email = jwtUtil.extractEmail(jwtToken);  // throws if token invalid
+                email = jwtUtil.extractEmail(jwt);
             } catch (Exception e) {
-                // Invalid token — log or ignore
-                System.out.println("Invalid JWT: " + e.getMessage());
+                // invalid token
             }
         }
 
-        // If email extracted and no current authentication set
         if (email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-            // Optionally: you could load UserDetails from DB here
-            UsernamePasswordAuthenticationToken authToken =
-                    new UsernamePasswordAuthenticationToken(email, null, Collections.emptyList());
-            SecurityContextHolder.getContext().setAuthentication(authToken);
+            if (jwtUtil.validateToken(jwt)) {
+                String role = jwtUtil.extractRole(jwt); // get role from JWT
+                List<SimpleGrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
+
+                UsernamePasswordAuthenticationToken authToken =
+                        new UsernamePasswordAuthenticationToken(email, null, authorities);
+
+                SecurityContextHolder.getContext().setAuthentication(authToken);
+            }
         }
 
-        // continue filter chain
-        filterChain.doFilter(request, response);
+        chain.doFilter(request, response);
     }
+
 }
